--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,9 @@
-body {
+@import url("https://fonts.googleapis.com/css2?family=Kanit:wght@600&family=Roboto+Mono:wght@400;600&family=Roboto:wght@900&family=Silkscreen&display=swap");
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  font-family: "Roboto Mono", monospace;
 }
